# otsdaq

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
otsdaq/: CMakeLists.txt
otsdaq-core/: CMakeLists.txt
otsdaq-core/ARTDAQDataManager/: ARTDAQDataManager.cc  ARTDAQDataManager.h  CMakeLists.txt
otsdaq-core/ARTDAQReaderCore/: ARTDAQReaderProcessorBase.cc  ARTDAQReaderProcessorBase.h  CMakeLists.txt
otsdaq-core/BitManipulator/: BitManipulator.cc  BitManipulator.h  CMakeLists.txt
otsdaq-core/CgiDataUtilities/: CMakeLists.txt  CgiDataUtilities.cc  CgiDataUtilities.h
otsdaq-core/CodeEditor/: CMakeLists.txt  CodeEditor.cc  CodeEditor.h  CodeEditorSupervisor.cc  CodeEditorSupervisor.h  version.cc
otsdaq-core/Configurable/: CMakeLists.txt  Configurable.cc  Configurable.h
otsdaq-core/ConfigurationDataFormats/: CMakeLists.txt  ConfigurationBase.cc  ConfigurationBase.h  ConfigurationGroupKey.cc  ConfigurationGroupKey.h  ConfigurationInfoReader.cc  ConfigurationInfoReader.h  ConfigurationVersion.cc  ConfigurationVersion.h  ConfigurationView.cc  ConfigurationView.h  ConfigurationView.icc  ViewColumnInfo.cc  ViewColumnInfo.h
otsdaq-core/ConfigurationInterface/: CMakeLists.txt  Configurable.h  ConfigurationHandler.cc  ConfigurationHandler.h  ConfigurationInterface.cc  ConfigurationInterface.h  ConfigurationManager.cc  ConfigurationManager.h  ConfigurationManagerRW.cc  ConfigurationManagerRW.h  ConfigurationTree.cc  ConfigurationTree.h  ConfigurationTree.icc  DatabaseConfigurationInterface.cc  DatabaseConfigurationInterface.h  DatabaseConfigurationInterface_Impl.cc  FileConfigurationInterface.cc  FileConfigurationInterface.h  JSONConfigurationHandler.cc.unused  JSONConfigurationHandler.h.unused  TimeFormatter.cc  TimeFormatter.h
otsdaq-core/ConfigurationPluginDataFormats/: ARTDAQAggregatorConfiguration.h  ARTDAQAggregatorConfiguration_configuration.cc  ARTDAQBoardReaderConfiguration.h  ARTDAQBoardReaderConfiguration_configuration.cc  ARTDAQBuilderConfiguration.h  ARTDAQBuilderConfiguration_configuration.cc  CMakeLists.txt  Configurations.h  Configurations_configuration.cc  DQMHistosConsumerConfiguration.h  DataDecoderConsumerConfiguration_configuration.cc  DesktopIconConfiguration.h  DesktopIconConfiguration_configuration.cc  DetectorConfiguration_configuration.cc  FEConfiguration_configuration.cc  FESlowControlsConfiguration.h  FESlowControlsConfiguration_configuration.cc  IterateConfiguration.h  IterateConfiguration_configuration.cc  MessageFacilityConfiguration.h  MessageFacilityConfiguration_configuration.cc  ModuleToFEConfiguration_configuration.cc  TemplateConfiguration.h  TemplateConfiguration_configuration.cc  XDAQContextConfiguration.h  XDAQContextConfiguration_configuration.cc
otsdaq-core/ControlsCore/: CMakeLists.txt  ControlsVInterface.cc  ControlsVInterface.h
otsdaq-core/CoreSupervisors/: ARTDAQDataManagerSupervisor.cc  ARTDAQDataManagerSupervisor.h  ARTDAQFEDataManagerSupervisor.cc  ARTDAQFEDataManagerSupervisor.h  CMakeLists.txt  CorePropertySupervisorBase.cc  CorePropertySupervisorBase.h  CoreSupervisorBase.cc  CoreSupervisorBase.h  DataManagerSupervisor.cc  DataManagerSupervisor.h  FEDataManagerSupervisor.cc  FEDataManagerSupervisor.h  FESupervisor.cc  FESupervisor.h  version.cc  version.h
otsdaq-core/DataDecoders/: BCOData.cc  BCOData.h  CMakeLists.txt  DataDecoder.cc  DataDecoder.h  DataTypes.cc  DataTypes.h  DetectorDataBase.h  FSSRData.cc  FSSRData.h  PSI46Data.cc  PSI46Data.h  PSI46DigData.cc  PSI46DigData.h  TriggerData.cc  TriggerData.h  VIPICData.cc  VIPICData.h  VirtualDetectorData.h
otsdaq-core/DataManager/: BufferImplementation.h  BufferImplementation.icc  CMakeLists.txt  CircularBuffer.h  CircularBuffer.icc  CircularBufferBase.cc  CircularBufferBase.h  DQMHistosConsumerBase.h  DataConsumer.cc  DataConsumer.h  DataManager.cc  DataManager.h  DataManagerSingleton.cc  DataManagerSingleton.h  DataProcessor.cc  DataProcessor.h  DataProducer.cc  DataProducer.h  DataProducerBase.cc  DataProducerBase.h  RawDataSaverConsumerBase.cc  RawDataSaverConsumerBase.h
otsdaq-core/DataProcessorPlugins/: ARTDAQConsumer.h  ARTDAQConsumer_processor.cc  ARTDAQProducer.h  ARTDAQProducer_processor.cc  CMakeLists.txt  DataDecoderConsumer.h  DataDecoderConsumer_processor.cc  OtsDataSaverConsumer.h  OtsDataSaverConsumer_processor.cc  RawDataSaverConsumer.h  RawDataSaverConsumer_processor.cc  RawDataVisualizerConsumer.h  RawDataVisualizerConsumer_processor.cc  TCPDataListenerProducer.h  TCPDataListenerProducer_processor.cc  TCPDataStreamerConsumer.h  TCPDataStreamerConsumer_processor.cc  UDPDataListenerProducer.h  UDPDataListenerProducer_processor.cc  UDPDataStreamerConsumer.h  UDPDataStreamerConsumer_processor.cc
otsdaq-core/DeprecatedConfigurationDataFormats/: Component.cpp  Component.h  DetectorRegisterConfiguration.cc  DetectorRegisterConfiguration.h  DetectorRegisterSequencer.cc  DetectorRegisterSequencer.h  FrontEndReaderRegisterConfiguration.cc  FrontEndReaderRegisterConfiguration.h  FrontEndReaderRegisterSequencer.cc  FrontEndReaderRegisterSequencer.h  FrontEndWriterRegisterConfiguration.cc  FrontEndWriterRegisterConfiguration.h  FrontEndWriterRegisterSequencer.cc  FrontEndWriterRegisterSequencer.h  ROCToFEConfiguration.h  ROCToFEConfiguration_configuration.cc  Register.cpp  Register.h  RegisterBase.cpp  RegisterBase.h  RegisterConfiguration.cpp  RegisterConfiguration.h  RegisterConfigurationInfoReader.cpp  RegisterConfigurationInfoReader.h  RegisterSequencer.cpp  RegisterSequencer.h  RegisterSequencerInfoReader.cpp  RegisterSequencerInfoReader.h  RegisterView.cpp  RegisterView.h  VersionAliases.h  VersionAliases_configuration.cc  ViewRegisterInfo.cpp  ViewRegisterInfo.h  ViewRegisterSequencerInfo.cpp  ViewRegisterSequencerInfo.h
otsdaq-core/EventBuilder/: AssociativeMemoryEventBuilder.cc  AssociativeMemoryEventBuilder.h  Event.cxx  Event.h  EventDataSaver.cc  EventDataSaver.h  LinkDef.h  VirtualEventBuilder.cc  VirtualEventBuilder.h  VirtualHit.h
otsdaq-core/FECore/: CMakeLists.txt  FEProducerVInterface.cc  FEProducerVInterface.h  (+9 more)
(+2759 files in other folders)
