add_subdirectory(PluginMakers)
add_subdirectory(BitManipulator)
add_subdirectory(CgiDataUtilities)
add_subdirectory(ConfigurationDataFormats)
add_subdirectory(ConfigurationPluginDataFormats)
add_subdirectory(ConfigurationInterface)
add_subdirectory(Configurable)
add_subdirectory(CoreSupervisors)
add_subdirectory(DataDecoders)
add_subdirectory(WorkLoopManager)
add_subdirectory(DataManager)
add_subdirectory(ARTDAQDataManager)
add_subdirectory(DataProcessorPlugins)
add_subdirectory(EventBuilder)
add_subdirectory(FiniteStateMachine)
add_subdirectory(MessageFacility)
add_subdirectory(MonicelliInterface)
add_subdirectory(NetworkUtilities)
add_subdirectory(ProgressBar)
add_subdirectory(RootUtilities)
add_subdirectory(SOAPUtilities)
add_subdirectory(GatewaySupervisor)
add_subdirectory(SupervisorInfo)
add_subdirectory(SystemMessenger)
add_subdirectory(WebUsersUtilities)
add_subdirectory(FECore)
add_subdirectory(XmlUtilities)
add_subdirectory(Macros)
add_subdirectory(ControlsCore)
add_subdirectory(WizardSupervisor)
add_subdirectory(CodeEditor)
