
add_subdirectory(Macros)
add_subdirectory(MessageFacility)
add_subdirectory(XmlUtilities)
add_subdirectory(TableCore)
add_subdirectory(ProgressBar)
add_subdirectory(ConfigurationInterface)
add_subdirectory(SOAPUtilities)
add_subdirectory(CgiDataUtilities)
add_subdirectory(TablePlugins)
add_subdirectory(SupervisorInfo)
add_subdirectory(WebUsersUtilities)
add_subdirectory(Configurable)
add_subdirectory(WorkLoopManager)
add_subdirectory(DataManager)
add_subdirectory(FiniteStateMachine)
add_subdirectory(NetworkUtilities)
add_subdirectory(FECore)
add_subdirectory(ARTDAQReaderCore)
add_subdirectory(DataProcessorPlugins)
add_subdirectory(ARTDAQDataManager)
add_subdirectory(CoreSupervisors)
add_subdirectory(BitManipulator)
add_subdirectory(ARTDAQSupervisor)
add_subdirectory(ARTDAQOnlineMonitor)
add_subdirectory(CodeEditor)
add_subdirectory(GatewaySupervisor)
add_subdirectory(SlowControlsCore)
add_subdirectory(RootUtilities)
add_subdirectory(WizardSupervisor)
