
add_subdirectory(Macros)
add_subdirectory(MessageFacility)
add_subdirectory(XmlUtilities)
add_subdirectory(TableCore)
cet_register_export_set(SET_NAME tableUsers SET_DEFAULT)
add_subdirectory(ProgressBar)
add_subdirectory(ConfigurationInterface)
cet_register_export_set(SET_NAME configInterfaceUsers SET_DEFAULT)
add_subdirectory(SOAPUtilities)
add_subdirectory(CgiDataUtilities)
add_subdirectory(TablePlugins)
add_subdirectory(SupervisorInfo)
add_subdirectory(WebUsersUtilities)
add_subdirectory(Configurable)
add_subdirectory(WorkLoopManager)
add_subdirectory(DataManager)
cet_register_export_set(SET_NAME dataManagerUsers SET_DEFAULT)
add_subdirectory(FiniteStateMachine)
cet_register_export_set(SET_NAME runInfoUsers SET_DEFAULT)
add_subdirectory(NetworkUtilities)
add_subdirectory(FECore)
cet_register_export_set(SET_NAME feCoreUsers SET_DEFAULT)
add_subdirectory(ARTDAQReaderCore)
add_subdirectory(DataProcessorPlugins)
add_subdirectory(ARTDAQDataManager)
add_subdirectory(CoreSupervisors)
add_subdirectory(BitManipulator)
add_subdirectory(ARTDAQSupervisor)
add_subdirectory(ARTDAQOnlineMonitor)
add_subdirectory(CodeEditor)
add_subdirectory(GatewaySupervisor)
add_subdirectory(RootUtilities)
add_subdirectory(WizardSupervisor)
add_subdirectory(SlowControlsCore)
